--- a/carshop_app/templates/carshop_app/carditail.html
+++ b/carshop_app/templates/carshop_app/carditail.html
@@ -2,11 +2,13 @@
 {% load static %}
 
 {% block carditail %}
+    <div class="carditail">
     {% if car.car_image %}
         <img src="{% static car.car_image %}" alt="img">
     {% else %}
         <img src="{% static 'static/imgs/noimage.jpg' %}" alt="No images">
     {% endif %}
+    </div>
     <h3>{{ car.car_mark }}</h3>
     <h4>{{ car.car_model }}</h4>
     <h4>Год выпуска: {{ car.car_year }}</h4>
