--- a/carshop_app/templates/carshop_app/addcarform.html
+++ b/carshop_app/templates/carshop_app/addcarform.html
@@ -1,7 +1,7 @@
 {% extends 'index.html' %}
 
 {% block form %}
-    <form action="{% url 'carshop:addcar' %}" method="post" class="form-horizontal addcardform">
+    <form action="{% url 'carshop:addcar' %}" method="post" class="form-horizontal addcardform" enctype='multipart/form-data'>
         {% csrf_token %}
         {% for field in form %}
             <div class="form-group">
