--- a/carshop_app/templates/carshop_app/carditail.html
+++ b/carshop_app/templates/carshop_app/carditail.html
@@ -2,19 +2,25 @@
 {% load static %}
 
 {% block carditail %}
-    <div class="carditail">
-    {% if car.car_image %}
-        <img src="{% static car.car_image %}" alt="img">
-    {% else %}
-        <img src="{% static 'static/imgs/noimage.jpg' %}" alt="No images">
-    {% endif %}
+    <div class="col-md-2">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer imperdiet sit amet nulla in tristique. Nam ullamcorper velit id venenatis dapibus. Nullam sit amet feugiat libero, vitae molestie ligula. Morbi pretium, ante id blandit maximus, lectus felis suscipit tellus, a posuere est odio at ipsum. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Fusce finibus sollicitudin eros, id gravida velit lacinia at. Nullam pulvinar turpis vel lorem molestie, eget mattis diam dapibus.</p>
     </div>
-    <h3>{{ car.car_mark }}</h3>
-    <h4>{{ car.car_model }}</h4>
-    <h4>Год выпуска: {{ car.car_year }}</h4>
-    <p>Описание: {{ car.car_description }}</p>
-    <p>Добавлено: {{ car.car_public }}</p>
-
+    <div class="col-md-4">
+        <div class="img-thumbnail carditail">
+        {% if car.car_image %}
+            <img src="{% static car.car_image %}" alt="img">
+        {% else %}
+            <img src="{% static 'static/imgs/noimage.jpg' %}" alt="No images">
+        {% endif %}
+        </div>
+    </div>
+    <div class="col-md-4">
+        <h3>{{ car.car_mark }}</h3>
+        <h4>{{ car.car_model }}</h4>
+        <h4>Год выпуска: {{ car.car_year }}</h4>
+        <p>Описание: {{ car.car_description }}</p>
+        <p>Добавлено: {{ car.car_public }}</p>
+    </div>
 
 
 {% endblock %}
