--- a/templates/carshop_proj/index.html
+++ b/templates/carshop_proj/index.html
@@ -18,7 +18,11 @@
             <ul class="nav navbar-nav">
                 <li><a href="/">Пункт 0</a></li>
                 <li><a href="/">Пункт 2</a></li>
-                <li class="right"><a href="{% url 'carshop:addcar' %}">ADD</a></li>
+                <li class="right">
+                    {% if username %}
+                        <a href="{% url 'carshop:addcar' %}">ADD</a>
+                    {% endif %}
+                </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 {% if username %}
