--- a/templates/carshop_proj/index.html
+++ b/templates/carshop_proj/index.html
@@ -17,7 +17,7 @@
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
                 <li><a href="/">Пункт 0</a></li>
-                <li><a href="/">Пункт 2</a></li>
+                <li><a href="{% url 'carshop:contact' %}">Contact us</a></li>
                 <li class="right">
                     {% if username %}
                         <a href="{% url 'carshop:addcar' %}">ADD</a>
@@ -37,6 +37,7 @@
 
 <div class="container">
     <div class="row">
+        {% block contact %}{% endblock %}
         {% block regist %}{% endblock %}
         {% block login %}{% endblock %}
         {% block carditail %}{% endblock %}
