--- a/cars/templates/cars/contactform.html
+++ b/cars/templates/cars/contactform.html
@@ -1,6 +1,6 @@
-{% extends 'index.html' %}
+{% extends 'base.html' %}
 
-{% block contact %}
+{% block content %}
     <h1>Contacts us</h1>
     <form role='form' action="" method="post" class="form-horizontal addcardform">
         {% csrf_token %}
