--- a/cars/templates/cars/carditail.html
+++ b/cars/templates/cars/carditail.html
@@ -1,16 +1,16 @@
-{% extends 'index.html' %}
+{% extends 'base.html' %}
 {% load static %}
 
-{% block carditail %}
+{% block content %}
     <div class="col-md-2">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer imperdiet sit amet nulla in tristique. Nam ullamcorper velit id venenatis dapibus. Nullam sit amet feugiat libero, vitae molestie ligula. Morbi pretium, ante id blandit maximus, lectus felis suscipit tellus, a posuere est odio at ipsum. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Fusce finibus sollicitudin eros, id gravida velit lacinia at. Nullam pulvinar turpis vel lorem molestie, eget mattis diam dapibus.</p>
     </div>
     <div class="col-md-4">
         <div class="img-thumbnail carditail">
         {% if car.car_image %}
-            <img src="{% static car.car_image %}" alt="img">
+            <img src="{% static car.car_image.url %}" alt="img">
         {% else %}
-            <img src="{% static 'static/imgs/noimage.jpg' %}" alt="No images">
+            <img src="{% static 'images/noimage.jpg' %}" alt="No images">
         {% endif %}
         </div>
     </div>
