--- a/loginsys/templates/loginsys/login.html
+++ b/loginsys/templates/loginsys/login.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 
-{% block login %}
+{% block content %}
         <form class="form-inline" action="{% url 'loginsys:login' %}" method="post">
             {% csrf_token %}
             <div class="form-group">
