--- a/cars/templates/cars/addcarform.html
+++ b/cars/templates/cars/addcarform.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% block title %}ADD{% endblock %}
+
 {% block content %}
     <form action="{% url 'carshop:addcar' %}" method="post" class="form-horizontal addcardform" enctype='multipart/form-data'>
         {% csrf_token %}
