--- a/cars/templates/cars/carlist.html
+++ b/cars/templates/cars/carlist.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 {% load static %}
 
+{% block title %}CarShop{% endblock %}
+
 {% block content %}
     <div class="col-md-3">
 
