--- a/cars/templates/cars/contactform.html
+++ b/cars/templates/cars/contactform.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% block title %}Contact us{% endblock %}
+
 {% block content %}
     <h1>Contacts us</h1>
     <form role='form' action="{% url 'carshop:contact' %}" method="post" class="form-horizontal addcardform">
