--- a/loginsys/templates/loginsys/regist.html
+++ b/loginsys/templates/loginsys/regist.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 
+{% block title %}Registration{% endblock %}
 
 {% block content %}
     <form action="{% url 'loginsys:regist' %}" method="post" class="form-horizontal">
