--- a/templates/base.html
+++ b/templates/base.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}{% endblock %}</title>
-    <link rel="stylesheet" type="text/css" href="{% static 'bootstrap.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'cars/css/bootstrap.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'cars/css/style.css' %}">
 
 </head>
 <body>
@@ -19,16 +19,17 @@
                 <li><a href="/">Пункт 0</a></li>
                 <li><a href="{% url 'carshop:contact' %}">Contact us</a></li>
                 <li class="right">
-                    {% if username %}
+                    {% if user.is_authenticated %}
                         <a href="{% url 'carshop:addcar' %}">ADD</a>
                     {% endif %}
                 </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                {% if username %}
-                    <li><a href="{% url 'loginsys:logout' %}">Выйти {{ username }}</a></li>
+                {% if user.is_authenticated %}
+                    <li><a href="{% url 'auth_logout' %}">Log out {{ user }}</a></li>
                 {% else %}
-                    <li><a href="{% url 'loginsys:login' %}">Войти</a></li>
+                    <li><a href="{% url 'auth_login' %}">Log in</a></li>
+                    <li><a href="{% url 'registration_register' %}">Sing up</a></li>
                 {% endif %}
             </ul>
         </div>
@@ -43,7 +44,7 @@
 
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-<script src="{% static 'js/bootstrap.js' %}"></script>
+<script src="{% static 'cars/js/bootstrap.js' %}"></script>
 
 </body>
 </html>
