--- a/templates/base.html
+++ b/templates/base.html
@@ -17,10 +17,10 @@
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
                 <li><a href="/">Пункт 0</a></li>
-                <li><a href="{% url 'carshop:contact' %}">Contact us</a></li>
+                <li><a href="{% url 'contact' %}">Contact us</a></li>
                 <li class="right">
                     {% if user.is_authenticated %}
-                        <a href="{% url 'carshop:addcar' %}">ADD</a>
+                        <a href="{% url 'addcar' %}">ADD</a>
                     {% endif %}
                 </li>
             </ul>
