--- a/templates/base.html
+++ b/templates/base.html
@@ -2,45 +2,68 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>{% block title %}{% endblock %}</title>
-    <link rel="stylesheet" type="text/css" href="{% static 'cars/css/bootstrap.css' %}">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>Clean Blog</title>
+
+    <!-- Bootstrap Core CSS -->
+    <link href="{% static 'cars/css/bootstrap.min.css' %}" rel="stylesheet">
+
+    <!-- Theme CSS -->
+    <link href="{% static 'cars/css/clean-blog.min.css' %}" rel="stylesheet">
+
+    <!-- Custom Fonts -->
+    <link href="{% static 'cars/css/font-awesome.min.css' %}" rel="stylesheet" type="text/css">
+    <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
+    <!-- self css -->
     <link rel="stylesheet" type="text/css" href="{% static 'cars/css/style.css' %}">
 
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-static-top">
-    <div class="container">
-        <div class="navbar-header">
-            <a class="navbar-brand" href="/">CarShop</a>
-        </div>
-        <div class="collapse navbar-collapse">
-            <ul class="nav navbar-nav">
-                <li><a href="/">Пункт 0</a></li>
-                <li><a href="{% url 'contact' %}">Contact us</a></li>
-                <li class="right">
-                    {% if user.is_authenticated %}
-                        <a href="{% url 'addcar' %}">ADD</a>
-                    {% endif %}
-                </li>
-            </ul>
-            <ul class="nav navbar-nav navbar-right">
-                {% if user.is_authenticated %}
-                    <li><a href="{% url 'auth_logout' %}">Log out {{ user }}</a></li>
-                {% else %}
-                    <li><a href="{% url 'auth_login' %}">Log in</a></li>
-                    <li><a href="{% url 'registration_register' %}">Sing up</a></li>
-                {% endif %}
-            </ul>
-        </div>
-    </div>
-</div>
 
-<div class="container">
-    <div class="row">
-        {% block content %}{% endblock %}
-    </div>
-</div>
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+      <div class="container">
+        <a class="navbar-brand" href="/">CarShop</a>
+        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+          Menu
+          <i class="fa fa-bars"></i>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="/">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">About</a>
+            </li>
+            {% if user.is_authenticated %}
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'addcar' %}">Add car</a>
+            </li>
+            {% endif %}
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'contact' %}">Contact</a>
+            </li>
+            </ul>
+            <ul class="navbar-nav ml-auto">
+            {% if user.is_authenticated %}
+                    <li class="nav-item"><a class="nav-link" href="{% url 'auth_logout' %}">Log out {{ user }}</a></li>
+                {% else %}
+                    <li class="nav-item"><a class="nav-link" href="{% url 'auth_login' %}">Log in</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{% url 'registration_register' %}">Sing up</a></li>
+                {% endif %}
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+{% block content %}{% endblock %}
 
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
