--- a/templates/base.html
+++ b/templates/base.html
@@ -65,6 +65,42 @@
 
 {% block content %}{% endblock %}
 
+<footer>
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-8 col-md-10 mx-auto">
+            <ul class="list-inline text-center">
+              <li class="list-inline-item">
+                <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/dsvistunov/">
+                  <span class="fa-stack fa-lg">
+                    <i class="fa fa-circle fa-stack-2x"></i>
+                    <i class="fa fa-linkedin-square fa-stack-1x fa-inverse"></i>
+                  </span>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a target="_blank" rel="noopener noreferrer" href="https://www.facebook.com/denis.svistunov">
+                  <span class="fa-stack fa-lg">
+                    <i class="fa fa-circle fa-stack-2x"></i>
+                    <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
+                  </span>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a target="_blank" rel="noopener noreferrer" href="https://github.com/dsvistunov/carshop">
+                  <span class="fa-stack fa-lg">
+                    <i class="fa fa-circle fa-stack-2x"></i>
+                    <i class="fa fa-github fa-stack-1x fa-inverse"></i>
+                  </span>
+                </a>
+              </li>
+            </ul>
+            <p class="copyright text-muted">Copyright © Denis Svistunov 2018</p>
+          </div>
+        </div>
+      </div>
+    </footer>
+
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script src="{% static 'cars/js/bootstrap.js' %}"></script>
