--- a/cars/templates/cars/addcarform.html
+++ b/cars/templates/cars/addcarform.html
@@ -25,7 +25,7 @@
                     {% csrf_token %}
                     {% for field in form %}
                         <div class="from-group row">
-                            <label class="col-sm-4 col-form-label">{{ field.label }}</label>
+                            <label class="col-sm-4 col-form-label" for="{{ field.id_for_label }}">{{ field.label }}</label>
                             {% if field.errors %}
                                     {% for error in field.errors %}
                                         <div class="text-danger">
