--- a/cars/templates/cars/contactform.html
+++ b/cars/templates/cars/contactform.html
@@ -3,17 +3,40 @@
 {% block title %}Contact us{% endblock %}
 
 {% block content %}
-    <h1>Contacts us</h1>
-    <form role='form' action="{% url 'contact' %}" method="post" class="form-horizontal addcardform">
-        {% csrf_token %}
-        {% for field in form %}
-            <div class="form-group">
-                <div class="col-sm-2 control-label">{{ field.label_tag }}</div>
-                <div class="col-sm-10">{{ field }}</div>
+    <header class="masthead" style="background-image: url('/static/cars/images/contact-bg.jpg')">
+      <div class="overlay"></div>
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-8 col-md-10 mx-auto">
+            <div class="site-heading">
+              <h1>Contact us</h1>
+              <span class="subheading">A Blog Theme by Start Bootstrap</span>
             </div>
-        {% endfor %}
-        <div class="col-sm-offset-2 col-sm-10">
-            <input class="btn btn-default" type="submit" value="Send">
+          </div>
         </div>
-    </form>
+      </div>
+    </header>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-6 col-md-10 mx-auto">
+                <form role='form' action="{% url 'contact' %}" method="post">
+                    {% csrf_token %}
+                    {% for field in form %}
+                        <div class="form-group row">
+                                <label class="col-sm-2 col-form-label" for="{{ field.id_for_label }}">{{ field.label }}</label>
+                                {% if field.errors %}
+                                        {% for error in field.errors %}
+                                            <div class="text-danger">
+                                                {{ error }}
+                                            </div>
+                                        {%endfor%}
+                                    {% endif %}
+                                <div class="col-sm-10">{{ field }}</div>
+                        </div>
+                    {% endfor %}
+                    <input class="btn btn-dark btn-block" type="submit" value="Send">
+                </form>
+            </div>
+        </div>
+    </div>
 {% endblock %}
