--- a/cars/templates/cars/contactform.html
+++ b/cars/templates/cars/contactform.html
@@ -1,21 +1,18 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block title %}Contact us{% endblock %}
 
+{% block header_background %}
+    {% static "cars/images/contact-bg.jpg" %}
+{% endblock %}
+
+{% block header_title %}Contact us{% endblock %}
+
+{% block subheader_title %}A Blog Theme by Start Bootstrap{% endblock %}
+
+
 {% block content %}
-    <header class="masthead" style="background-image: url('/static/cars/images/contact-bg.jpg')">
-      <div class="overlay"></div>
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-8 col-md-10 mx-auto">
-            <div class="site-heading">
-              <h1>Contact us</h1>
-              <span class="subheading">A Blog Theme by Start Bootstrap</span>
-            </div>
-          </div>
-        </div>
-      </div>
-    </header>
     <div class="container">
         <div class="row">
             <div class="col-lg-6 col-md-10 mx-auto">
