--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,31 +1,46 @@
 {% extends 'base.html' %}
+{% load static %}
 
-{% block title %}Login{% endblock %}
+{% block title %}Log in{% endblock %}
+
+{% block header_background %}
+    {% static "cars/images/home-bg.jpg" %}
+{% endblock %}
+
+{% block header_title %}Log in{% endblock %}
+
+{% block subheader_title %}{% endblock %}
 
 {% block content %}
-    <div class="row">
-    <div class="col-md-4"></div>
-    <div class="col-md-4 well">
-        <h2 class="text-center">Log in</h2>
-        <form class="form-horizontal" method="post">
-            {% csrf_token %}
-            {% for field in form %}
-            <div class="from-group">
-                <label class="control-label" for="{{field.id_for_label}}">{{field.label}}</label>
-                {% if field.errors %}
-                    {% for error in field.errors %}
-                        <div class="text-danger">
-                            {{ error }}
-                        </div>
-                    {%endfor%}
-                {% endif %}
-                <input class="form-control" type="{{field.field.widget.input_type}}" name="{{field.html_name}}" id="{{field.id_for_label}}">
-            </div><br>
-            {% endfor %}
-            <button type="submit" class="btn btn-login btn-block">Log in</button>
-        </form>
-        <a href="{% url 'registration_register' %}">Registration</a>
-    </div>
-    <div class="col-md-4"></div>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-3 col-md-4 mx-auto">
+                <form class="form-horizontal" method="post">
+                {% csrf_token %}
+                {% for field in form %}
+                <div class="form-group">
+                    <label class="control-label" for="{{field.id_for_label}}">{{field.label}}</label>
+                    {% if field.errors %}
+                        {% for error in field.errors %}
+                            <div class="text-danger">
+                                {{ error }}
+                            </div>
+                        {%endfor%}
+                    {% endif %}
+                    <input class="form-control" type="{{field.field.widget.input_type}}" name="{{field.html_name}}" id="{{field.id_for_label}}">
+                </div><br>
+                {% endfor %}
+                <button type="submit" class="btn btn-dark btn-block">Log in</button>
+            </form>
+            <ul class="nav justify-content-center">
+                <li class="nav-item">
+                    <a class="nav-link" href="/">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'registration_register' %}">Registration</a>
+                </li>                   
+            </ul>
+            </div>
+        </div>
     </div>
 {% endblock %}
