--- a/templates/registration/registration_form.html
+++ b/templates/registration/registration_form.html
@@ -1,45 +1,55 @@
 {% extends "base.html" %}
+{% load static %}
+
+{% block title %}Registration{% endblock %}
+
+{% block header_background %}
+    {% static "cars/images/post-bg.jpg" %}
+{% endblock %}
+
+{% block header_title %}Sign up{% endblock %}
+
+{% block subheader_title %}{% endblock %}
 
 {% block content %}
-	<div class="row">
-		<div class="col-md-4"></div>
-		<div class="col-md-4 well">
-			<h2 class="text-center">Sign up</h2>
-			<form class="form-horizontal" method="post">
-				{% csrf_token %}
-				{% for field in form %}
-				<div class="control-group">
-					<div class="controls">
-						<label class="control-label" for="{{field.id_for_label}}">{{field.label}}</label>
-					</div>
-				</div>
-				<div class="control-group">
-					<div class="controls">
-						{% if field.errors %}
-					  		{% for error in field.errors %}
-								<div class="text-danger">
-						  			{{ error }}
-								</div>
-							{%endfor%}
-						{% endif %}
-						<input class="form-control" type="{{field.field.widget.input_type}}" name="{{field.html_name}}" id="{{field.id_for_label}}">
-						{% if field.errors %}
-						{% if field.help_text %}
-							<small class="form-text text-muted list-unstyled">
-								{% autoescape off %}
-									{{field.help_text}}
-								{% endautoescape %}
-							</small>
-							
-						{% endif %}
-						{%endif%}
-					</div>
-				</div><br>
-				{% endfor %}
-				<button type="submit" class="btn btn-login btn-block">Sign up</button>
-			</form>
-			<a href="{% url 'auth_login' %}">Log in</a>
-		</div>
-		<div class="col-md-4"></div>
-	</div>	
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-3 col-md-4 mx-auto">
+                <form method="post">
+                    {% csrf_token %}
+                    {% for field in form %}
+                    <div class="form-group">
+                        <label class="control-label" for="{{field.id_for_label}}">{{field.label}}</label>
+                        {% if field.errors %}
+                            {% for error in field.errors %}
+                                <div class="text-danger">
+                                    {{ error }}
+                                </div>
+                            {%endfor%}
+                        {% endif %}                     
+                        <input class="form-control" type="{{field.field.widget.input_type}}" name="{{field.html_name}}" id="{{field.id_for_label}}">
+                        {% if field.errors %}
+                            {% if field.help_text %}
+                                <small class="form-text text-muted list-unstyled">
+                                    {% autoescape off %}
+                                        {{field.help_text}}
+                                    {% endautoescape %}
+                                </small>
+                            {% endif %}
+                        {%endif%}
+                    </div><br>
+                    {% endfor %}
+                    <button type="submit" class="btn btn-dark btn-block">Sign up</button>
+                </form>
+                <ul class="nav justify-content-center">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'auth_login' %}">Log in</a>
+                    </li>                   
+                </ul>
+            </div>
+        </div>
+    </div>
 {% endblock %}
