--- a/cars/templates/cars/carditail.html
+++ b/cars/templates/cars/carditail.html
@@ -3,26 +3,27 @@
 
 {% block title %}{{ car.car_mark }} {{ car.car_model }}{% endblock %}
 
+{% block header_background %}
+    {% static "cars/images/contact-bg.jpg" %}
+{% endblock %}
+
+{% block header_title %}Car deatil{% endblock %}
+
+{% block subheader_title %}A Blog Theme by Start Bootstrap{% endblock %}
+
 {% block content %}
-    <div class="col-md-2">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer imperdiet sit amet nulla in tristique. Nam ullamcorper velit id venenatis dapibus. Nullam sit amet feugiat libero, vitae molestie ligula. Morbi pretium, ante id blandit maximus, lectus felis suscipit tellus, a posuere est odio at ipsum. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Fusce finibus sollicitudin eros, id gravida velit lacinia at. Nullam pulvinar turpis vel lorem molestie, eget mattis diam dapibus.</p>
-    </div>
-    <div class="col-md-4">
-        <div class="img-thumbnail carditail">
-        {% if car.car_image %}
-            <img src="{% static car.car_image.url %}" alt="img">
-        {% else %}
-            <img src="{% static 'images/noimage.jpg' %}" alt="No images">
-        {% endif %}
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-6 col-md-8 mx-auto">
+                <h3>{{ car.car_mark }} {{ car.car_model }}</h3>
+                <h4>{{ car.car_year }}</h4>
+                {% if car.car_image %}
+                    <img class="img-fluid" src="{{ car.car_image.url }}" alt="car image">
+                {% else %}
+                    <img class="img-fluid" src="{% static 'cars/images/noimage.jpg' %}" alt="No images">
+                {% endif %}
+                <p>{{ car.car_description|linebreaks }}</p>
+                <p class="text-muted">{{ car.car_public }}</p>
+            </div>            
         </div>
-    </div>
-    <div class="col-md-4">
-        <h3>{{ car.car_mark }}</h3>
-        <h4>{{ car.car_model }}</h4>
-        <h4>Год выпуска: {{ car.car_year }}</h4>
-        <p>Описание: {{ car.car_description }}</p>
-        <p>Добавлено: {{ car.car_public }}</p>
-    </div>
-
-
 {% endblock %}
