--- a/cars/static/cars/css/style.css
+++ b/cars/static/cars/css/style.css
@@ -1,3 +1,18 @@
 select {
     margin-bottom: 10px;
 }
+
+.page-link {
+    color: #212529; 
+}
+ 
+.page-item.active .page-link {
+    color: #fff;
+    background-color: #343a40;
+    border-color: #343a40;
+ 
+}
+ 
+.page-link:focus, .page-link:hover {
+    color: #343a40;
+}
