--- a/cars/templates/cars/addcarform.html
+++ b/cars/templates/cars/addcarform.html
@@ -4,7 +4,7 @@
 {% block title %}ADD{% endblock %}
 
 {% block header_background %}
-    {% static "cars/images/post-bg.jpg" %}
+    {% static "cars/images/addcar.jpg" %}
 {% endblock %}
 
 {% block header_title %}Add car{% endblock %}
