--- a/cars/templates/cars/carditail.html
+++ b/cars/templates/cars/carditail.html
@@ -4,7 +4,7 @@
 {% block title %}{{ car.car_mark }} {{ car.car_model }}{% endblock %}
 
 {% block header_background %}
-    {% static "cars/images/contact-bg.jpg" %}
+    {% static "cars/images/ditail.jpg" %}
 {% endblock %}
 
 {% block header_title %}Car deatil{% endblock %}
