--- a/cars/templates/cars/index.html
+++ b/cars/templates/cars/index.html
@@ -4,7 +4,7 @@
 {% block title %}CarShop{% endblock %}
 
 {% block header_background %}
-    {% static "cars/images/home-bg.jpg" %}
+    {% static "cars/images/home.jpg" %}
 {% endblock %}
 
 {% block header_title %}Welcome to CarShop{% endblock %}
