--- a/templates/registration/activation_complete.html
+++ b/templates/registration/activation_complete.html
@@ -1,5 +1,20 @@
 {% extends 'base.html' %}
+{% load static %}
+
+{% block title %}Complete{% endblock %}
+
+{% block header_background %}
+    {% static "cars/images/contact-bg.jpg" %}
+{% endblock %}
+
+{% block header_title %}Your account activated{% endblock %}
+
+{% block subheader_title %}{% endblock %}
+
 {% block content %}
-	<h1>Your account activated</h1>
-	<h3>Now you can <a href="{% url 'auth_login' %}">log in</a></h3>
+<div class="container">
+	<div class="row">
+		<h3>Now you can <a href="{% url 'auth_login' %}">log in</a></h3>
+	</div>
+</div>
 {% endblock %}
